change added a logo photo

--- a/Coffe Webpage With Html, Css And Javascript/index.html
+++ b/Coffe Webpage With Html, Css And Javascript/index.html
@@ -1177,7 +1177,7 @@
           </textPath>
         </text>
       </svg>
-      <img src="https://via.placeholder.com/80" alt="Coffee Borcelle Logo">
+      <img src="good logo.png" alt="Coffee Borcelle Logo">
     </div>
 
     <div class="hamburger">
