change footer logo image

--- a/Coffe Webpage With Html, Css And Javascript/index.html
+++ b/Coffe Webpage With Html, Css And Javascript/index.html
@@ -1544,7 +1544,7 @@
             </textPath>
           </text>
         </svg>
-        <img src="https://via.placeholder.com/60" alt="Coffee Borcelle Logo">
+        <img src="good logo.png" alt="Coffee Borcelle Logo">
       </div>
       <div class="contact-info-details">
         <p><i class="fas fa-phone"></i>(08) 400 2000</p>
