deleted and added a photo

--- a/Coffe Webpage With Html, Css And Javascript/index.html
+++ b/Coffe Webpage With Html, Css And Javascript/index.html
@@ -1177,7 +1177,7 @@
           </textPath>
         </text>
       </svg>
-      <img src="good logo.png" alt="Coffee Borcelle Logo">
+      <img src="go images.jpg" alt="Coffee Borcelle Logo">
     </div>
 
     <div class="hamburger">
@@ -1544,7 +1544,7 @@
             </textPath>
           </text>
         </svg>
-        <img src="good logo.png" alt="Coffee Borcelle Logo">
+        <img src="go images.jpg" alt="Coffee Borcelle Logo">
       </div>
       <div class="contact-info-details">
         <p><i class="fas fa-phone"></i>(08) 400 2000</p>
